[build-system]
# The system used for building your project
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
# General information about your Python project
name = "website-change-detector"
version = "0.1.0"
description = "Script to monitor website changes and send SMS alerts"
authors = ["Braelyn Boynton"]

[tool.poetry.dependencies]
# Dependencies for the project, including the version of Python
python = "^3.11"

# The actual Python libraries your script needs
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
twilio = "^7.0.0"
fuzzywuzzy = "^0.18.0"
python-dotenv = "^0.19.2"
openai = "1.70.0"



[[tool.poetry.scripts]]
# Any scripts or commands for your project
monitor = "monitor:main"